--- a/templates/Java.xml
+++ b/templates/Java.xml
@@ -9,4 +9,9 @@
       <option name="JAVA_CODE" value="true" />
     </context>
   </template>
+  <template name="toMapGet" value="List&lt;Long&gt; ids = list.stream().map(S::getId).collect(Collectors.toList());" description="toMapGet" toReformat="false" toShortenFQNames="true">
+    <context>
+      <option name="JAVA_CODE" value="true" />
+    </context>
+  </template>
 </templateSet>
