--- a/templates/Java.xml
+++ b/templates/Java.xml
@@ -14,4 +14,9 @@
       <option name="JAVA_CODE" value="true" />
     </context>
   </template>
+  <template name="toGroup" value="Map&lt;Long, List&lt;String&gt;&gt; groupMap = list.stream()&#10;                        .collect(Collectors.groupingBy(S::getId, &#10;                            Collectors.mapping(S::getName, Collectors.toList())));" description="toGroup" toReformat="false" toShortenFQNames="true">
+    <context>
+      <option name="JAVA_CODE" value="true" />
+    </context>
+  </template>
 </templateSet>
